--- a/stylesheets/StylePolicy.css
+++ b/stylesheets/StylePolicy.css
@@ -1,52 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10vw;
+  background: white;
+}
+
+#title {
+  text-align: center;
+  padding: 2vh 0;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.contact {
+  font-size: 15px;
+  margin-top: 2vh;
+}
+
+.container {
+  margin-top: 20px;
+  font-size: 15px;
+  line-height: 22px;
+  padding: 20px 30px;
+  box-shadow: 0 0 5px rgba(219, 84, 97, 0.5);
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin: 3vh 0;
+  border-radius: 8px;
+  font-size: 24px;
+}
+
+@media screen and (max-width: 600px) {
   body {
-    min-height: 100vh;
-    display: block;
-    align-items: center;
-    justify-content: center;
-    padding-left: 300px;
-    padding-right: 300px;
-    background: white;
+    padding-left: 10px;
+    padding-right: 10px;
   }
-#title{
-    text-align: center;
-    border-radius: 8px;
-    box-shadow:0 1px 0 rgba(0, 0, 0, 0.2);
-}
-.contact{
-    font-size: 18px;
-    margin-top: 10px;
-}
-.container{
-    margin-top: 20px;
-    font-size: 18px;
-    padding-left: 30px;
-    padding-right:30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 8px;
-    border-radius: 8px;
-    box-shadow:1px 1px 5px rgba(215, 198, 10, 0.8);
-    margin-bottom: 20px;
-
-}
-h2{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow:0 1px 0 rgba(0, 0, 0, 0.2);
-    font-size: 24px;
-}
-@media screen and (max-width: 768px) {
-
-    body{
-      padding-left: 10px;
-      padding-right: 10px;
-    }
 }
