--- a/stylesheets/StyleTerm.css
+++ b/stylesheets/StyleTerm.css
@@ -1,53 +1,48 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    
-  }
-  body {
-    min-height: 100vh;
-    display: block;
-    align-items: center;
-    justify-content: center;
-    padding-left: 300px;
-    padding-right: 300px;
-    background: white;
-  }
-#title{
-    text-align: center;
-    border-radius: 8px;
-    box-shadow:0 1px 0 rgba(0, 0, 0, 0.2);
-}
-.contact{
-    font-size: 18px;
-    margin-top: 10px;
-}
-.container{
-    margin-top: 20px;
-    font-size: 18px;
-    padding-left: 30px;
-    padding-right:30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 8px;
-    border-radius: 8px;
-    box-shadow:1px 1px 5px rgba(215, 198, 10, 0.8);
-    margin-bottom: 20px;    
-    
-}
-h2{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 24px;
-    border-radius: 8px;
-    box-shadow:0 1px 0 rgba(0, 0, 0, 0.2);
-}
-@media screen and (max-width: 768px) {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
-  body{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  padding: 0 12vw;
+  align-items: center;
+  justify-content: center;
+  background: white;
+}
+
+#title {
+  text-align: center;
+  border-bottom: 4px double rgba(219, 84, 97, 0.5);
+}
+
+.contact {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.container {
+  margin: 2vh 0;
+  font-size: 15px;
+  padding: 20px 30px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px rgba(219, 84, 97, 0.5);
+}
+
+h2 {
+  width: 35%;
+  margin: 20px 0;
+  font-size: 24px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 600px) {
+  body {
     padding-left: 10px;
     padding-right: 10px;
   }
-  
 }
