--- a/stylesheets/StyleRegform.css
+++ b/stylesheets/StyleRegform.css
@@ -213,7 +213,10 @@ input[type=number] {
   .form .column {
     flex-wrap: wrap;
   }
-
+  #Send {
+    padding: 8px;
+    font-size: 2.4vh;
+  }
   .form :where(.gender-option, .gender) {
     row-gap: 15px;
   }
