--- a/stylesheets/StyleTerm.css
+++ b/stylesheets/StyleTerm.css
@@ -20,11 +20,6 @@ body {
   border-bottom: 4px double rgba(219, 84, 97, 0.5);
 }
 
-.contact {
-  font-size: 18px;
-  margin-top: 10px;
-}
-
 .container {
   margin: 2vh 0;
   font-size: 15px;
@@ -42,7 +37,10 @@ h2 {
 
 @media screen and (max-width: 600px) {
   body {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0 10px;
+    font-size: 14px;
+  }
+  h2{
+    font-size: 20px;
   }
 }
