--- a/stylesheets/StyleHelp.css
+++ b/stylesheets/StyleHelp.css
@@ -10,27 +10,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 0;
   background: white;
   flex-direction: column;
 }
-h2 {
-    position: relative;
-    top: 0; /* Aligns at the top */
-    left: 50%; /* Centers horizontally */
-    transform: translateX(-50%); /* Adjusts centering */
-    margin-bottom: 2px;
-    padding: 10px;
-    background: white; /* Optional: background for visibility */
-    width: 100%; /* Optional: stretches width */
-    text-align: center;
-    font-size: 4vh;
-    font-weight: 500;
-    border-radius: 8px;
-    box-shadow:0 1px 0 rgba(0, 0, 0, 0.1);
-  }
 .container1{
   position: relative;
+  margin-top: 3%;
   max-width: 700px;
   width: 100%;
   background:white;
@@ -72,7 +58,7 @@ h2 {
   }
   
 .container1 header {
-  font-size: 3.2vh;
+  font-size: 3.3vh;
   color: #333;
   font-weight: 500;
   text-align: center;
