--- a/stylesheets/StylePolicy.css
+++ b/stylesheets/StylePolicy.css
@@ -12,11 +12,11 @@ body {
   display: block;
   align-items: center;
   justify-content: center;
-  padding: 0 10vw;
   background: white;
 }
 
-#title {
+.title {
+  margin-top: 4%;
   text-align: center;
   padding: 2vh 0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
