--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -278,7 +278,7 @@ section.why .why-container .reason {
     min-height: 30vh;
     justify-content: center;
     align-items: center;
-    padding: 3% 1% 3% 1%;
+    padding: 3% 1%;
     border: 4px solid var(--color3);
     border-radius: max(1vh, 1vw);
     box-shadow: 0 0 1vw var(--color3);
@@ -608,6 +608,10 @@ footer .footer-container .contact-foot {
 
     section.why p.title {
         width: 100%;
+        font-size: 3vh;
+    }
+    section.why .why-container .reason p.res-desp{
+        font-size: 2.5vh;
     }
 
     section.why .why-container .reason {
