--- a/stylesheets/StyleAbout.css
+++ b/stylesheets/StyleAbout.css
@@ -23,6 +23,10 @@ body{
     background-color: var(--bkground);
 }
 
+main.main-about-content{
+    padding: 0 5%;
+}
+
 section.container-intro{
     margin-top: 6%;
     width: 100%;
@@ -239,8 +243,8 @@ section.focus-wrap .focus-contain{
         font-size: var(--textSize);
     }
     img{
-        margin-left: 20%;
-        width: 50vw;
+        margin-left: 10%;
+        width: 80vw;
         height: auto;
     }
 }
