--- a/stylesheets/StyleRegformworker.css
+++ b/stylesheets/StyleRegformworker.css
@@ -16,6 +16,15 @@ body {
   background: rgba(200, 218, 222, 0.6);
 }
 
+::-moz-selection{
+  background-color: #90b2e2;
+  color: rgb(200, 71, 84);
+}
+::selection{
+  background-color: #90b2e2;
+  color: rgb(200, 71, 84);
+}
+
 .container {
   position: relative;
   max-width: 700px;
