--- a/stylesheets/StyleAbout.css
+++ b/stylesheets/StyleAbout.css
@@ -133,10 +133,10 @@ section.team .team-container .team-member{
     border-radius: 10px;
 
     img{
-        padding: 0 5% 5% 5%;
+        padding: 2%;
         border-bottom: 2px solid var(--hover);
         margin: auto;
-        max-width: 275px;
+        width:70%;
         max-height: 250px;
     }
 
@@ -200,7 +200,7 @@ section.join-wrap .join-text{
     font-size: var(--textSize);
 
     img{
-        width: 22vw;
+        width: 25vw;
         height: 30vh;
         padding: 0;
         border-right: none;
@@ -223,8 +223,8 @@ section.team .team-container .team-member{
     border-radius: 10px;
 
     img{
-        padding: 0 10% 5% 10%;
-        max-width: 300px;
+        padding: 5%;
+        width: 70%;
         max-height: 250px;
     }
 
